# hadron

./: Cargo.toml  flake.nix
arch/x86_64/: Cargo.toml
arch/x86_64/src/: gdt.rs  idt.rs  lib.rs
generic/exception/: Cargo.toml
generic/exception/src/: lib.rs
generic/io/: Cargo.toml
generic/io/src/: framebuffer.rs  lib.rs
generic/io/src/framebuffer/: default.rs  vga.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: cores.rs  main.rs
libs/kstructs/src/: lib.rs  map.rs
libs/kstructs/src/map/: hash.rs
libs/x86_64/src/: lib.rs  op.rs  registers.rs  structures.rs  types.rs
libs/x86_64/src/op/: interrupts.rs
libs/x86_64/src/registers/: rflags.rs
libs/x86_64/src/structures/: memory.rs  table.rs
libs/x86_64/src/types/: paging.rs
