[package]
name = "hadron"
version = "0.0.2"
authors = ["Florian Marrero Liestmann <f.m.liestmann@fx-ttr.de>"]
edition = "2024"
build = "build.rs"

[dependencies]

spin = "0.10.0"
volatile = "0.6.1"
limine = "0.5.0"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]


[dependencies.arch-x86_64]
path = "../arch/x86_64"

[dependencies.generic-io]
path = "../generic/io"

[dependencies.generic-exception]
path = "../generic/exception"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
