[package]
name = "generic-io"
version = "0.0.2"
authors = ["Florian Marrero Liestmann <f.m.liestmann@fx-ttr.de>"]
edition = "2024"

[dependencies]
limine = "0.5.0"
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.generic-exception]
path = "../exception"